--- a/assets/home_style_assets/style.css
+++ b/assets/home_style_assets/style.css
@@ -538,7 +538,6 @@
 	position: relative;
 }
 .img-photo{
-	max-height: 200px;
 	width: 100%;
 	margin-bottom: 20px;
 }
@@ -595,6 +594,7 @@
 .link-buy li{
 	display: inline-block;
 	margin-right: 5px;
+	margin-bottom: 8px;
 }
 .icon-link img{
 	max-width: 35px;
@@ -1021,6 +1021,9 @@
 	text-align: center;
 	max-height:50px;
 }
+.sidebar-nav > .sidebar-brand a:hover{
+	background-color: rgb(0,0,0,0) !important;
+}
 .logo-footer-dashboard{
 }
 .logo-footer-dashboard img{
@@ -1068,8 +1071,8 @@
 	margin-left: 10px;
 }
 .list-notification{
-	border-bottom: 1px solid #DEF0F3;
-	margin-bottom: 25px;
+	border-bottom: 1px solid #1D505A;
+	padding: 30px 0;
 }
 .list-notification h5{
 	margin-bottom: 0px;
@@ -1229,6 +1232,12 @@ input::-webkit-inner-spin-button {
 .list-footer li{
 	margin-bottom: 20px;
 }
+.upload-btn:type=['file']{
+	border: 1px solid #bdbdbd;
+}
+
+
+
 @media(min-width:768px) {
 	#wrapper {
 		padding-left: 250px;
@@ -1499,3 +1508,21 @@ input::-webkit-inner-spin-button {
 		padding: 20px;
 	}
 }
+
+.cmp-img{
+	margin: auto;
+	width: 60%;
+	padding: 10px;
+}
+
+.img-photo-b{
+	width: 100%;
+    height: 27em;
+	margin-bottom: 20px;
+}
+
+.rowx::after {
+	content: "";
+	clear: both;
+	display: table;
+  }
